# BeMore-GUI

./: CMakeLists.txt  README.md  main.cpp  main.qml
icons/: arrowleft-svgrepo-com.svg:Zone.Identifier  camera-svgrepo-com.svg:Zone.Identifier  console-controller-svgrepo-com.svg:Zone.Identifier  music-notes-svgrepo-com.svg:Zone.Identifier  poweron.Identifier  sprocket.svg:Zone.Identifier  wallpaper.jpg:Zone.Identifier  wallpapergif.gif:Zone.Identifier  wallpapergif2.gif:Zone.Identifier
